# GE-MyRoad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ClothSDK/: .gitignore  CMakeLists.txt  Doxyfile  imgui.ini
ClothSDK/.cache/clangd/index/: BendingConstraint.cpp.868635CE7D7F91F7.idx  BendingConstraint.hpp.8FD17F37D80F2CFE.idx  ClothMesh.cpp.D091E65B635B8441.idx  ClothMesh.hpp.F87BD85692C97FBA.idx  Collider.cpp.58B4330C201F5CA9.idx  Collider.hpp.D2D5DC5D8928992D.idx  Constraint.cpp.FF1F200DF81B7352.idx  Constraint.hpp.AD69C5CDEC3C8AFA.idx  DistanceConstraint.cpp.F8DC36259DF7B319.idx  DistanceConstraint.hpp.541C9769E788E03D.idx  Particle.cpp.9AE6B9BCB2CF9F61.idx  Particle.hpp.F57E923A8C311D2F.idx  PlaneCollider.cpp.D787B7E4CB52ED9B.idx  PlaneCollider.hpp.DFAD328BDD123570.idx  Solver.cpp.4704D76F6B0CA15B.idx  Solver.hpp.613D0C7E9100AE99.idx  SpatialHash.cpp.0416660399C4FBD9.idx  SpatialHash.hpp.BBDB2641D4669E80.idx  SphereCollider.cpp.BA3BC930841960EC.idx  SphereCollider.hpp.91A3489490CA6470.idx  Types.hpp.A71EEDB163CDAF63.idx  bending_constraint_test.cpp.2449491153359E2E.idx  distance_constraint_test.cpp.223B87B7AB6D8157.idx  particle_test.cpp.2791FB4EA8D2743E.idx  physics_tests.cpp.919A183F39EA9FE8.idx  solver_test.cpp.BB193A9653BD43CE.idx  spatial_hash_test.cpp.64752AFC0AFE2C34.idx  test_self_collision.cpp.983CB3AA818040F9.idx  test_self_collision.cpp.BC9099F6568E7951.idx  visual_test_collision.cpp.A1B2EF8B8C8A39BD.idx
ClothSDK/core/: CMakeLists.txt
ClothSDK/core/include/engine/: ClothMesh.hpp
ClothSDK/core/include/io/: ConfigLoader.hpp  OBJLoader.cpp  OBJLoader.hpp
ClothSDK/core/include/math/: Types.hpp
ClothSDK/core/include/physics/: BendingConstraint.hpp  Collider.hpp  Constraint.hpp  DistanceConstraint.hpp  Particle.hpp  PlaneCollider.hpp  Solver.hpp  SpatialHash.hpp  SphereCollider.hpp
ClothSDK/core/include/utils/: Logger.hpp
ClothSDK/core/src/engine/: ClothMesh.cpp
ClothSDK/core/src/io/: ConfigLoader.cpp  OBJLoader.cpp
ClothSDK/core/src/physics/: BendingConstraint.cpp  Collider.cpp  Constraint.cpp  DistanceConstraint.cpp  Particle.cpp  PlaneCollider.cpp  Solver.cpp  SpatialHash.cpp  SphereCollider.cpp
ClothSDK/core/src/utils/: Logger.cpp
ClothSDK/data/configs/: silk.json
ClothSDK/examples/: load_path.py  simulation.py
ClothSDK/python/src/: bindings.cpp
ClothSDK/tests/: CMakeLists.txt  manual_test.cpp  physics_tests.cpp
ClothSDK/tests/core_tests/: bending_constraint_test.cpp  distance_constraint_test.cpp  particle_test.cpp  solver_test.cpp  spatial_hash_test.cpp
ClothSDK/viewer/: CMakeLists.txt
ClothSDK/viewer/include/: Application.hpp  Camera.hpp  Renderer.hpp
ClothSDK/viewer/shaders/: cloth.vert
ClothSDK/viewer/src/: Application.cpp  Camera.cpp  Renderer.cpp
CppLearning/: hello
CppLearning/Essentials/: EvenOr.cpp  Factorial.cpp  Gauss.cpp  HelloWorld.cpp  InOut.cpp  Minmax.cpp  PrimeNumber.cpp  README.md  TriangleCalculator.cpp  Vowels.cpp  vowels
CppLearning/Pointers/: Pointers.cpp  README.md  References.cpp  references
CppLearning/Structures/: Points.cpp  Vectores.cpp
CppLearning/Structures & Classes/: Matrix.cpp  Points.cpp  Rectangle.cpp  Vectores.cpp
OpenGL/: CMakeLists.txt
OpenGL/.cache/clangd/index/: main.cpp.60327F0D2CFA13A1.idx  shader.cpp.F9DCEC800776FC97.idx
OpenGL/include/: shader.hpp
OpenGL/src/: main.cpp  shader.cpp
Rasterization/: main.cpp
Rasterization/images/: output.tga
RayTracing/RayTracingNextWeek/: FirstImage.cc  README.md  aabb.h  camera.h  first  hittable.h  hittable_list.h  interval.h  material.h  paralelos.ppm  perlin.h  quad.h  rtweekend.h
RayTracing/RayTracingNextWeek/images/: cornell.ppm  light.ppm
RayTracing/RayTracingOneWeekend/: FirstImage.cc  bvh.h  camera.h  first  hittable.h  material.h  ray.h  sphere.h  texture.h  vec3.h
RayTracing/RayTracingRestOfYourLife/: FirstImage.cc  aabb.h  camera.h  constant_medium.h  cornell.ppm  first  hittable.h  interval.h  pi  pi.cc  sphere.h  texture.h
RayTracing/RayTracingRestOfYourLife/images/: bounding.ppm  cornell_rotations.ppm  cornell_smoke.ppm  fog.ppm
RayTracing/RayTracingWeekend/: camera.h  color.h  hittable.h  interval.h  rtweekend.h
RayTracingOneWeekend/: FirstImage.cc  camera.h  color.h  first  hittable.h  hittable_list.h  image.ppm  material.h  rtweekend.h  sphere.h  vec3.h
